force-app/main/default/objects/custom_create170__c/custom_create170__c.object-meta.xml
<CustomObject>
    <label>Custom created object170</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects170</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>