force-app/main/default/objects/custom_create170__c/fields/custom_create_170field634__c.field-meta.xml
<CustomField>
    <fullName>custom_create_170field634__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 170field634</label>
    <type>Checkbox</type>
</CustomField>